src/objects/BRP_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>API_Version__c</fullName>
        <description>The values can be either v2 or v4. Default will be v4.</description>
        <inlineHelpText>The values can be either v2 or v4. Default will be v4.</inlineHelpText>
        <label>API Version</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Id__c</fullName>
        <description>Holds the BRP Dealer ID of the BP Dealer</description>
        <label>Dealer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius_Measure__c</fullName>
        <description>Mile or Kilometer</description>
        <label>Radius Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius__c</fullName>
        <description>Radius for searching for parts</description>
        <label>Radius</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>Holds the BRP endpoint</description>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <label>Org Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Inventory_Cron_Expression__c</fullName>
        <label>Part Inventory Cron Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Master_Successful_Imported_Date__c</fullName>
        <label>Parts Master Successful Imported Date</label>
        <type>DateTime</type>
    </fields>
    <label>BRP Settings</label>
</CustomObject>